# memcachex

./: CMakeLists.txt  README.md  example.cpp
examples/: CMakeLists.txt  basic_example.cpp
src/: MemcachedClient.cpp  MemcachedClient.h
